# crkg

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: CODEOWNERS
src/crkg/: __init__.py
