[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crkg"
dynamic = ["version"]
description = "Clinical Reasoning Knowledge Graph"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [
    { name = "Kresna Sucandra", email = "kresnasucandra@gmail.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "crkg-schema>=0.0.1",
    "pydantic>=2.0",
    "neo4j>=5.0",
    "qdrant-client>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "testcontainers>=4.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/balinesthesia/crkg"
Repository = "https://github.com/balinesthesia/crkg"

[tool.hatch.version]
path = "src/crkg/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/crkg"]

# --- uv: local editable override for crkg-schema until M0-T20 ---
[tool.uv.sources]
crkg-schema = { path = "../crkg-schema", editable = true }

# --- ruff ---
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

# --- mypy ---
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
no_implicit_optional = true
no_implicit_reexport = true
ignore_missing_imports = false

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --tb=short"
